--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -2,11 +2,11 @@ name: Keep Render Awake
 
 on:
   schedule:
-    - cron: "*/1 * * * *"
+    - cron: "*/10 * * * *"
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
       - name: Curl your Render bot
-        run: curl -s https://bachatareminder.onrender.com
+        run: curl -s https://bachatareminder-vio5.onrender.com
